<resources>
    <string name="app_name">NetflixPhake</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Say Hello To Your New App!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_my_home">Welcome to my home</string>
    <string name="your_web_client_id">778306080243-qlufn2m71vreeo5tpb7uetr3t9spph9p.apps.googleusercontent.com</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="todo">TODO</string>
    <string name="c">/</string>
</resources>