<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.netflixphake.ui.fragment.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_NetflixFragment"
            app:destination="@id/NetflixFragment" />
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.netflixphake.ui.fragment.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.netflixphake.ui.fragment.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
    </fragment>

    <fragment
        android:id="@+id/NetflixFragment"
        android:name="com.example.netflixphake.ui.fragment.NetflixFragment"
        android:label="Home"
        tools:layout="@layout/fragment_netflix">
        <action
            android:id="@+id/NetflixFragment_to_HomeFragment"
            app:destination="@+id/HomeFragment"
            />
        <action
            android:id="@+id/NetflixFragment_to_FirstFragment"
            app:destination="@+id/FirstFragment"/>

    </fragment>
</navigation>